# synthmap

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
synthmap/app/: cli.py  config.json  main.py
synthmap/app/cli_modules/: dump.py  parse_video.py  register.py  resize_images.py  show.py
synthmap/app/routers/: api.py  entities.py  html.py  images.py  projects.py  users.py  utils.py
synthmap/db/: manager.py
synthmap/imageProcessing/: imgproc.py
synthmap/log/: config.json  logger.py
synthmap/models/: alice.py  colmap.py  colmapScene.py  common.py  synthmap.py
synthmap/projectManager/: aliceParser.py  colmapParser.py
synthmap/test/: conftest.py  test_HTTP_API.py  test_colmapParser.py  test_dbMan.py  test_pydanticAlice.py  test_pydanticColmap.py  test_pydanticColmapScene.py  test_pydanticModels.py  test_pydanticSynthmap.py
synthmap/test/sample_data/: images.txt  project.ini
synthmap/test/sample_data/colmap_model/: cameras.txt  points3D.txt
synthmap/test/sample_data/meshroom_big_images/: sfm.json
synthmap/test/sample_data/meshroom_big_images/FeatureMatching/: 0.matches.txt
synthmap/wikidata/: manager.py
