[metadata]
name = synthmap
version = 0.2.220630
author = Benoît Drumain
author_email = ben@theaom.ai
description = A toolkit to recover geodata from collections of images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://theaom.ai
project_urls =
    Bug Tracker = https://github.com/theaomben/synthmap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freely Distributable
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics :: 3D Modeling
    Topic :: Scientific/Engineering :: GIS

[options]
packages =
    synthmap
    synthmap.app
    synthmap.app.cli_modules
    synthmap.app.routers
    synthmap.db
    synthmap.log
    synthmap.models
    synthmap.projectManager
    synthmap.test
    synthmap.test.sample_data
    synthmap.test.sample_data.sample_big_images
    synthmap.test.sample_data.meshroom_big_images
    synthmap.test.sample_data.meshroom_big_images.FeatureMatching
include_package_data = True
python_requires = >=3.10
install_requires = 
    anyio
    argon2-cffi
    argon2-cffi-bindings
    asgiref
    astroid
    atomicwrites
    attrs
    beautifulsoup4
    black
    certifi
    cffi
    charset-normalizer
    click
    colorama
    commonmark
    dill
    fastapi
    h11
    idna
    iniconfig
    isort
    Jinja2
    lazy-object-proxy
    MarkupSafe
    mccabe
    mypy-extensions
    numpy
    opencv-python
    packaging
    pathspec
    platformdirs
    pluggy
    py
    pycparser
    pydantic
    Pygments
    pylint
    PyNaCl
    pyparsing
    pytest
    python-multipart
    python-dotenv
    requests
    rich
    rich-click
    sniffio
    starlette
    tomli
    typing_extensions
    urllib3
    uvicorn
    wrapt

[options.packages.find]
where = synthmap

[options.entry_points]
console_scripts =
    cli = synthmap.app.cli:cli